--- a/package.json
+++ b/package.json
@@ -6,9 +6,26 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "format:check": "prettier --check .",
+    "format::write": "prettier --write ."
   },
   "dependencies": {
     "astro": "^5.5.6"
+  },
+  "devDependencies": {
+    "@eslint/js": "9.23.0",
+    "@typescript-eslint/eslint-plugin": "8.29.0",
+    "@typescript-eslint/parser": "8.29.0",
+    "eslint": "9.23.0",
+    "eslint-config-prettier": "10.1.1",
+    "eslint-plugin-astro": "1.3.1",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-prettier": "5.2.5",
+    "eslint-plugin-unused-imports": "4.1.4",
+    "globals": "16.0.0",
+    "prettier": "3.5.3",
+    "prettier-plugin-astro": "0.14.1",
+    "typescript-eslint": "8.29.0"
   }
 }
